...
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nazivET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="345dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Unesi naziv"
            android:inputType="text"
            app:boxStrokeColor="@color/mainGreen"
            app:hintTextColor="@color/mainGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uslikajBiljkuBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/porodicaET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="345dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Unesi porodicu"
...
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/medicinskoUpozorenjeET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="345dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Unesi medicinisko upozorenje"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jeloET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="345dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Unesi jelo"
...
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_width="348dp"
            android:layout_height="300dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:choiceMode="multipleChoice"
...
            app:layout_constraintHorizontal_bias="0.709"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MedicinskeKoristiHeader"
            app:layout_constraintVertical_bias="0.0" />

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_width="348dp"
            android:layout_height="300dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:choiceMode="multipleChoice"
...
            android:layout_marginTop="64dp"
            android:layout_marginEnd="160dp"
            android:text="@string/izaberi_medicinske_koristi"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dodajJeloBtn" />

        <TextView
            android:id="@+id/KlimatskiTipHeader"
            style="@style/addBiljkaHeader"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
...
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klimatskiTipLV" />

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_width="348dp"
            android:layout_height="300dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:choiceMode="multipleChoice"
...
            android:text="@string/izaberi_profil_okusa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zemljisniTipLV" />

        <ListView
            android:id="@+id/profilOkusaLV"
            android:layout_width="348dp"
            android:layout_height="420dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:choiceMode="singleChoice"
...
            android:text="Uslikaj biljku"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slikaIV"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/dodajBiljkuBtn"
            android:layout_width="348dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
...
