...
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="15dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/spinner_item" />

...
